Add QIN Weiyi student report and update HTML report with link

--- a/report.html
+++ b/report.html
@@ -94,4 +94,4 @@ appear often. Some wish for AI to verify code against papers or to maintain “c
 technical-term tooltips (e.g. clickable definitions), and more natural revision so that AI-edited text is less detectable.</li>
 </ul>
 </div>
-<h2>4. Individual Reports</h2><div class='card'><p class='muted'>Per-student response reports (matched only) are in the <code>students/</code> folder. Non-respondents: <code>students_not_completed.md</code>. No personal data in this report.</p></div></div></body></html>
+<h2>4. Individual Reports</h2><div class='card'><p class='muted'>Per-student response reports (matched only) are in the <code>students/</code> folder. Non-respondents: <code>students_not_completed.md</code>. No personal data in this report.</p><p class='muted' style='margin-top: 0.5rem;'>Available reports: <a href='students/student_0766_QIN_Weiyi.md' style='color: var(--accent);'>QIN Weiyi</a> and others.</p></div></div></body></html>
